# dingcode-editor

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ChangeLog  MobileDevice.cmake  NaLibrary.cmake  README.md  ZERO_CHECK.proj  ZERO_CHECK.proj.filters  cmake_install.cmake  dingcode-editor.sln  dingcode-editor.vcxproj  dingcode-editor.vcxproj.filters  p_par2child.psd  pkg.yaml  run.bat  xmake.lua
.github/workflows/: cmake.yml
Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  TEST.hpp
Classes/ImGuiExt/: CCImGuiLayer.cpp  imgui_lua.cpp  sol_imgui.h
Classes/ImGuiExt/imgui/misc/cpp/: imgui_stdlib.cpp
Classes/ding/: AppSetting.cpp  AppSetting.h  Core.h  FileDialogUtils.cpp  FileDialogUtils.h  LuaEntry.cpp  LuaEntry.h  sol_cocos.h
Classes/ding/common/: SmartSingleton.h  StringUtil.cpp  StringUtil.h
Classes/ding/guid/: guid.cpp  guid.inl
Classes/ding/sys/: Display.hpp  FileDialogUtils.cpp  FileDialogUtils.h  IniParser.hpp  RemoteDebuger.cpp  RemoteDebuger.h  cmdline.h
Classes/ding/uuid/: guid.cpp  guid.h  guid.inl
Classes/sol/: sol.hpp
cocos2d/: xmake.lua
cocos2d/cmake/Modules/: CocosBuildHelpers.cmake
cocos2d/cocos/: CMakeLists.txt  cocos2d.h
cocos2d/cocos/2d/: CCCamera.cpp  CCCamera.h
cocos2d/cocos/2d/libcocos2d_win10/: libcocos2d.vcxproj
cocos2d/cocos/base/: CCConsole.cpp  CCDirector.cpp  CCDirector.h  ccConfig.h
cocos2d/cocos/network/: CMakeLists.txt  WebSocket.cpp
cocos2d/cocos/platform/: CCGLView.cpp  CCGLView.h
cocos2d/cocos/platform/desktop/: CCGLViewImpl-desktop.cpp
cocos2d/cocos/platform/win32/: CCFileUtils-win32.cpp
cocos2d/extensions/: CMakeLists.txt  cocos-ext.h
origin_res/: p_par2child.psd
proj.ios_mac/ImGuiX.xcodeproj/: project.pbxproj
proj.ios_mac/mac/: Info.plist  main.cpp
proj.win32/icon/: icon.rc
res/: ImGuiTest.lua  enum.lua  env.lua  main.lua  main_pcall.lua  nodeconfig.lua  path.lua  release.lua  remotedebuger.lua
res/assets/shader/: sp_outline.frag
res/data/: database.lua  datamanager.lua
res/engine/cocos/: all_config.lua  demo_dev.lua  demo_traffic.lua  dev_v6.lua
res/engine/cocos/action/: move_back.lua  move_forward.lua  stop_move.lua
res/engine/cocos/cond/: is_active.lua
res/engine/cocos/config/: allnodeconfig.lua
res/engine/cocos/config/nodeconfig/: action_movenode.lua  cond_movenode.lua  movenode.lua
res/http/: api.lua  http.lua
res/imguix/: fileutils.lua  init.lua
res/imguix/config/: conf_menu.lua
res/imguix/menu/: menu_all.lua  menu_detail.lua  menu_input.lua  menu_mainbar.lua  menu_node.lua  menu_screensup.lua  menu_start.lua  menu_tree.lua
res/imguix/popup/: add_dnode.lua
res/lib/: display.lua  display_ex.lua  displayex.lua  event.lua  functions.lua  init.lua  lua_ex.lua  theme.lua
res/lib/inc/: shader_inc.lua
res/lib/language/: Lang.lua  zh_cn.lua
res/lib/lua_ex/: g_ex.lua  init.lua  io_ex.lua  math_ex.lua  string_ex.lua  table_ex.lua
res/net/: api.lua  http.lua
res/render/: init.lua  memory.lua  viewmanager.lua
res/render/common/: base_nodepoint.lua  nodeframe.lua  nodein.lua  nodeline.lua  nodeout.lua  nodepoint_default.lua  nodepointinput.lua
res/render/view/: basenode.lua  node_active.lua  node_default.lua  node_parallel.lua  node_selector.lua  node_sequence.lua
third/libnfd/lib/win32/: nfd.lib
third/libwebsockets/include/: libwebsockets.h  lws_config.h
third/libwebsockets/include/libwebsockets/: lws-context-vhost.h  lws-dlo.h  lws-html.h  lws-misc.h  lws-mqtt.h
third/openssl/lib/mac/pkgconfig/: libssl.pc
tools/: all_node.json  async_lua_bnode.py  build.py
